--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,9 @@ body {
   color: var(--title-text-color);
   line-height: 1.19em;
   text-decoration: none;
+  display: block;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -62,6 +65,42 @@ body {
 .list {
   list-style: none;
 }
+.container {
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  outline: 2px solid tomato;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+.site-nav,
+.contacts-list {
+  display: flex;
+}
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+.ul {
+  margin: 0;
+  padding: 0;
+}
+.contacts-list {
+  margin-left: auto;
+}
+a {
+  display: block;
+}
+
+.list-item + .list-item {
+  margin-left: 50px;
+}
+
 /* Секция герой*/
 
 .hero {
@@ -96,7 +135,11 @@ body {
 /*Преимущества*/
 
 .hidden-title {
-  visibility: hidden;
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 .title-text {
@@ -204,4 +247,8 @@ body {
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.87;
+}
+.portfolio-list {
+  display: flex;
+  justify-content: center;
 }
