--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,15 @@
   --hero-footer-color: #2f303a;
   --second-button-color: #188ce8;
 }
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
 body {
   font-family: Roboto, sans-serif;
@@ -73,11 +82,7 @@ body {
   margin-left: auto;
   outline: 2px solid tomato;
 }
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
+
 .site-nav,
 .contacts-list {
   display: flex;
@@ -101,6 +106,13 @@ a {
   margin-left: 50px;
 }
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.section-header {
+  border-bottom: 1px solid #ececec;
+}
 /* Секция герой*/
 
 .hero {
@@ -152,7 +164,16 @@ a {
   font-size: 14px;
   line-height: 1.71em;
 }
+.quality-list {
+  outline: 2px solid tomato;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
 
+.list + .list {
+  margin-left: 30px;
+}
 /*Наши услуги*/
 
 .section-title {
@@ -161,6 +182,18 @@ a {
   line-height: 1.17em;
   text-align: center;
   font-weight: bold;
+  margin: 0 0 50px 0;
+}
+.list-works {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  margin: 0;
+  padding: 0;
+}
+
+.section-work {
+  padding-top: 0;
 }
 
 /*Наша команда*/
@@ -169,7 +202,9 @@ a {
   background: #f5f4fa;
 }
 .box {
-  width: 1600px;
+  display: flex;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .subtitle {
   font-size: 16px;
