Добавляет стили позиционирования

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,17 +218,26 @@ a {
 .subtitle {
   font-size: 16px;
   line-height: 1.19em;
+  text-align: center;
 }
 .title-card {
   color: var(--title-text-color);
   font-size: 16px;
   line-height: 1.19em;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 .team-cards {
   display: flex;
   flex-basis: calc((100%-60px) / 3);
 }
-
+.list.team-item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+}
 /*Футер*/
 
 .footer-logo {
