--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,8 @@ a {
   font-size: 16px;
   line-height: 1.19em;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 .title-card {
   color: var(--title-text-color);
