--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,6 @@ body {
   background-color: #ffffff;
   font-size: 14px;
   letter-spacing: 0.03em;
-
-  margin: 0;
 }
 /* цвет основного текста #212121 */
 /* вторичный цвет текста #757575 */
@@ -48,12 +46,13 @@ body {
   color: var(--black-text-color);
 }
 .site-nav .link {
+  font-weight: 500;
   color: var(--title-text-color);
   line-height: 1.19em;
   text-decoration: none;
   display: block;
-  padding-top: 35px;
-  padding-bottom: 35px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -64,6 +63,7 @@ body {
   color: var(--accent-color);
 }
 .contacts-list .link {
+  font-weight: 500;
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.14em;
@@ -97,6 +97,7 @@ body {
 ul {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 .contacts-list {
   margin-left: auto;
@@ -123,11 +124,11 @@ a {
 
 .hero {
   background: var(--hero-footer-color);
-  width: 1600px;
-
+  max-width: 1600px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  padding: 200px 0;
 }
 .hero-title {
   color: var(--white-text-color);
@@ -168,25 +169,26 @@ a {
   height: 1px;
   margin: -1px;
 }
-
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
 .title-text {
   color: var(--title-text-color);
   font-size: 14px;
-  line-height: 1.14em;
-  font-weight: bold;
-
-  margin-top: 0;
+  line-height: 1.14;
+  font-weight: 700;
   margin-bottom: 10px;
 }
 .text {
   font-size: 14px;
   line-height: 1.71em;
-  margin: 0;
 }
+
 .quality-list {
   display: flex;
-  padding: 0;
-  margin: 0;
 }
 
 .list + .list {
@@ -206,10 +208,6 @@ a {
 
 .list-works {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  margin: 0;
-  padding: 0;
 }
 
 /*Наша команда*/
@@ -223,19 +221,20 @@ a {
   line-height: 1.19em;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 30px;
 }
 .title-card {
   color: var(--title-text-color);
   font-size: 16px;
   line-height: 1.19em;
-  margin-top: 30px;
   margin-bottom: 10px;
   text-align: center;
 }
 .team-cards {
   display: flex;
-  flex-basis: calc((100%-60px) / 3);
+}
+.content-card {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .list.team-item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -251,7 +250,6 @@ a {
   text-decoration: none;
   font-size: 26px;
   line-height: 1.19em;
-  padding-top: 60px;
   margin-bottom: 20px;
 }
 .list-address {
@@ -265,11 +263,10 @@ a {
 }
 .footer {
   background: var(--hero-footer-color);
-  padding: 0;
+  padding: 60px 0;
 }
 .contacts {
   font-style: normal;
-  padding-bottom: 60px;
 }
 .contact-letter {
   color: var(--white-text-color);
@@ -307,6 +304,7 @@ a {
   padding: 6px 22px;
   border-color: transparent;
   border-radius: 4px;
+  font-weight: 500;
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -334,17 +332,11 @@ a {
   justify-content: center;
   margin-bottom: 50px;
 }
-.list-button {
-  display: flex;
-}
 
 .list-button:not(:last-child) {
   margin-right: 8px;
 }
 .portfolio {
-  padding: 0;
-  margin: 0;
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
@@ -353,8 +345,8 @@ a {
 .portfolio > .card-list {
   margin-top: 30px;
   margin-left: 30px;
-  width: 370px;
 }
+
 img {
   display: block;
   width: 100%;
