--- a/css/styles.css
+++ b/css/styles.css
@@ -36,21 +36,18 @@ body {
   color: var(--accent-color);
   text-decoration: none;
   font-size: 26px;
-  line-height: 1.19em;
-  font-weight: bold;
-
+  line-height: 1.17;
+  font-weight: 700;
   margin-right: 93px;
 }
-
 .logo-studio {
   color: var(--black-text-color);
 }
 .site-nav .link {
   font-weight: 500;
   color: var(--title-text-color);
-  line-height: 1.19em;
+  line-height: 1.17;
   text-decoration: none;
-  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -66,7 +63,7 @@ body {
   font-weight: 500;
   color: var(--primary-text-color);
   font-size: 14px;
-  line-height: 1.14em;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
@@ -75,9 +72,6 @@ body {
   color: var(--accent-color);
 }
 
-.list {
-  list-style: none;
-}
 .container {
   width: 1200px;
   padding-right: 15px;
@@ -133,10 +127,9 @@ a {
 .hero-title {
   color: var(--white-text-color);
   font-size: 44px;
-  line-height: 1.36em;
+  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
   width: 696px;
   margin: auto;
 }
@@ -154,6 +147,9 @@ a {
 .button-primary {
   color: var(--white-text-color);
   text-decoration: none;
+  font-size: 16px;
+  letter-spacing: 0.06em;
+  line-height: 1.88;
 }
 .button-primary:hover,
 .button-primary:focus {
@@ -181,10 +177,12 @@ p {
   line-height: 1.14;
   font-weight: 700;
   margin-bottom: 10px;
+  text-transform: uppercase;
 }
 .text {
   font-size: 14px;
-  line-height: 1.71em;
+  line-height: 1.71;
+  width: 261px;
 }
 
 .quality-list {
@@ -200,7 +198,7 @@ p {
 .section-title {
   color: var(--title-text-color);
   font-size: 36px;
-  line-height: 1.17em;
+  line-height: 1.17;
   text-align: center;
   font-weight: bold;
   margin: 0 0 50px 0;
@@ -218,14 +216,14 @@ p {
 
 .subtitle {
   font-size: 16px;
-  line-height: 1.19em;
+  line-height: 1.19;
   text-align: center;
   margin-top: 0;
 }
 .title-card {
   color: var(--title-text-color);
   font-size: 16px;
-  line-height: 1.19em;
+  line-height: 1.19;
   margin-bottom: 10px;
   text-align: center;
 }
@@ -246,15 +244,14 @@ p {
 
 .footer-logo {
   font-family: 'Raleway', sans-serif;
+  font-weight: 700;
   color: var(--accent-color);
   text-decoration: none;
   font-size: 26px;
-  line-height: 1.19em;
+  line-height: 1.19;
   margin-bottom: 20px;
 }
-.list-address {
-  list-style: none;
-}
+
 .list-address:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -265,19 +262,19 @@ p {
   background: var(--hero-footer-color);
   padding: 60px 0;
 }
-.contacts {
+.address {
   font-style: normal;
 }
 .contact-letter {
   color: var(--white-text-color);
   font-size: 14px;
-  line-height: 1.71em;
+  line-height: 1.71;
 }
 .link-mail,
 .link-tel {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
-  line-height: 1.71em;
+  line-height: 1.71;
   text-decoration: none;
 }
 
@@ -299,7 +296,7 @@ p {
 .filter-button {
   color: var(--title-text-color);
   font-size: 16px;
-  line-height: 1.63em;
+  line-height: 1.63;
   text-align: center;
   padding: 6px 22px;
   border-color: transparent;
@@ -316,14 +313,14 @@ p {
 .title-item {
   color: var(--title-text-color);
   font-size: 18px;
-  line-height: 2em;
+  line-height: 2;
   letter-spacing: 0.06em;
-  margin: 0;
+  font-weight: 700;
 }
 .text-item {
   color: var(--primary-text-color);
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.88;
   margin-top: 4px;
   margin-bottom: 0;
 }
